# amazon-practice

./: DefaultTemplate.cpp  LRU.cpp  README.md  file.cpp  newfile.cpp  virtualclass.cpp
Arrays/: ArrangeAllNegativeTogether.cpp  CountAnagrams.cpp  MedianOfTwoSortedSameSizeArrays.cpp
Backtracking/: KnightTourProblem.cpp
CodingPractice/: CMakeLists.txt
CodingPractice/BackTracking/: NQueenProblem.cpp  RatMazeProblem.cpp  SudokuSolver.cpp  WordBreakProblem.cpp
CodingPractice/BasicConcepts/: OnlineCodingPractice.cpp  arrayQuestionns.cpp  basic.cpp  codeChefJuneCookoff.cpp  dynamicmemory.cpp  exceptionHandling.cpp  fileHandling.cpp  friendinlinefunc.cpp  jasmeet.c  main.cpp  myfile.txt  recursionpractice.c  recursionpractice2.c  struct.c
CodingPractice/ClassObject/: inherit.cpp  opoverloading.cpp  passingobjectandreturn.cpp  templateExample.cpp
CodingPractice/DataStructures/: BinarySearchTree.cpp  LinkedList.cpp  SegmentTree.cpp  StacKPractice.cpp  TreeDS.cpp
CodingPractice/DataStructures/Graphs/: Dijkstra.cpp  Graphs.cpp  GraphsATOZ.cpp  Kruskals.cpp  PathFromStartToEnd.cpp  Prims.cpp
CodingPractice/DataStructures/StackQuestions/: NGL.cpp  NGR.cpp  NSL.cpp  NSR.cpp  StockSpanProblem.cpp
CodingPractice/DataStructures/TreeDataStructure/: BoundryLevelTraversal.cpp  Inorder.cpp  LevelOrderTraversal.cpp  Postorder.cpp  Preorder.cpp  TreeGenerationInorder&Preorder.cpp  TreeHeight.cpp  TreeLeftView.cpp  TreeTopVIew.cpp  VerticalOrderTraversal.cpp
CodingPractice/DivideandConquer/: MergeSortPractice.cpp  binarysearch.cpp  mergesort.cpp  quicksort.cpp
CodingPractice/DynamicProgramming/: 01KnapsackProblem.cpp  AddSignForTargetSum.cpp  CoinChangeMaxNumberofWays.cpp  CountNumberofSubset.cpp  DynamicProblemFibonacci.cpp  EditDistance.cpp  EqualPartitions.cpp  LongestCommonSubsequence.cpp  LongestCommonSubstring.cpp  LongestIncreasingSubsequence.cpp  MatrixChainMultiplication.cpp  MaxSumDivisibleBy3.cpp  MinimumDifferencePartition.cpp  OptimalStrategyForGame.cpp  PallindromicPartitions.cpp  RodCuttingProblem.cpp  SumofSubset.cpp  UnboundedKnapsack.cpp
CodingPractice/GreedyAlgo/: ActivitySelectionProblem.cpp  AssigningMicesToHoles.cpp  JobSequencingProblem.cpp  fractionalknapsack.cpp  sumofsubset.cpp
CodingPractice/OnlineCodingComp/: Ajira.cpp  CodeVita.cpp  CourseraDS.cpp  GoogleKickStart.cpp  Hackerrank.cpp  RecursionPractice.cpp
CodingPractice/OnlineCodingComp/Codechef/: JulyCookOff.cpp  JulyLong.cpp
CodingPractice/Sorting/: BubbleSort.cpp  InsertionSort.cpp  MergeSort.cpp  SelectionSort.cpp
Dynamic Programming/: BestStockTimeKequals2.cpp  LongestPathWithPlus1.cpp  MinCost11tonn.cpp  MinSubsetDiff.cpp  SubsetSum.cpp
Graph/: BFS.cpp  ColorGraph.cpp  CycleinUndirectedGraph.cpp  DFS.cpp  Kruskals.cpp  Prims.cpp  TopologicalSort.cpp
Heap/: MergeKSortedArrays.cpp
LinkedList/: AddTwoNumberUsingLinkedList.cpp  LinkedListDefaultTemplate.cpp  ReverseLinkedList.cpp  ReverseLinkedListinGroup.cpp  SortingLinkedList.cpp
Matrix/: 90DegreeRotation.cpp  AllPathstarttoEnd.cpp  SpiralOrderTraversal.cpp
OOPS/: ClassTemplate.cpp  ConstructorInheritance.cpp  OperatorOverloading.cpp  PassingAndReturningObject.cpp  StaticKeyword.cpp  TemplateFunction.cpp  friendFunction.cpp
Recursion/: SortAStack.cpp  TOH.cpp
Sorting/: BubbleSort.cpp  InsertionSort.cpp  MergeSort.cpp  QuickSort.cpp  SelectionSort.cpp
Stack & Queues/: ReverseaStack.cpp  SortAStack.cpp  StackConstruction.cpp  stackMiddle.cpp
Trees/: BFS.cpp  BToDLL.cpp  BottomView.cpp  InOrder.cpp  KthSmallestElement.cpp  LCAinBST.cpp  LCAinBT.cpp  LargestValueAtEachLevel.cpp  LeftView.cpp  MergeTwoBinaryTrees.cpp  PostOrder.cpp  PreOrder.cpp  RightView.cpp  Slope-1.cpp  SymmetricBinaryTrees.cpp  TopView.cpp  TreesDefaultTemplate.cpp  VerticalLevel.cpp
