cmake_minimum_required(VERSION 3.16)
project(CodingPractice)

set(CMAKE_CXX_STANDARD 14)

#Basic Concepts
#add_executable(CodingPractice main.cpp)
#add_executable(CodingPractice passingobjectandreturn.cpp)
#add_executable(CodingPractice opoverloading.cpp)
#add_executable(CodingPractice quicksort.cpp)
#add_executable(CodingPractice OnlineCodingPractice.cpp)
#add_executable(CodingPractice inherit.cpp)
#add_executable(CodingPractice exceptionHandling.cpp)
#add_executable(CodingPractice fileHandling.cpp dynamicmemory.cpp)
#add_executable(CodingPractice friendinlinefunc.cpp)
#add_executable(CodingPractice exceptionHandling.cpp)
#add_executable(CodingPractice templateExample.cpp)
#add_executable(CodingPractice dynamicmemory.cpp)
#add_executable(CodingPractice arrayQuestionns.cpp)


#Important Data Structures
#add_executable(CodingPractice DataStructures/LinkedList.cpp)
#add_executable(CodingPractice DataStructures/StacKPractice.cpp)
#add_executable(CodingPractice DataStructures/StackQuestions/NGL.cpp DataStructures/StackQuestions/NSL.cpp DataStructures/StackQuestions/NGR.cpp DataStructures/StackQuestions/NSR.cpp DataStructures/StackQuestions/StockSpanProblem.cpp)
#add_executable(CodingPractice DataStructures/StackQuestions/NextGreaterToRight.cpp)
#add_executable(CodingPractice DataStructures/TreeDS.cpp)
#add_executable(CodingPractice DataStructures/Graphs.cpp DataStructures/GraphsATOZ.cpp)
#add_executable(CodingPractice DataStructures/SegmentTree.cpp)
#add_executable(CodingPractice DataStructures/Graphs/GraphsATOZ.cpp)
#add_executable(CodingPractice DataStructures/Graphs/Prims.cpp)
#add_executable(CodingPractice DataStructures/Graphs/Kruskals.cpp)
#add_executable(CodingPractice DataStructures/Graphs/Dijkstra.cpp DataStructures/Graphs/PathFromStartToEnd.cpp)
#add_executable(CodingPractice DataStructures/Graphs/PathFromStartToEnd.cpp)

# Tree DataStructure Questions

#add_executable(CodingPractice DataStructures/TreeDataStructure/BoundryLevelTraversal.cpp)
#add_executable(CodingPractice DataStructures/TreeDataStructure/LevelOrderTraversal.cpp)
#add_executable(CodingPractice DataStructures/TreeDataStructure/Preorder.cpp)
#add_executable(CodingPractice DataStructures/TreeDataStructure/Inorder.cpp)
#add_executable(CodingPractice DataStructures/TreeDataStructure/Postorder.cpp)
#add_executable(CodingPractice DataStructures/TreeDataStructure/TreeHeight.cpp)
#add_executable(CodingPractice DataStructures/TreeDataStructure/TreeGenerationInorder&Preorder.cpp)
#add_executable(CodingPractice DataStructures/TreeDataStructure/TreeBottomView.cpp)
#add_executable(CodingPractice DataStructures/TreeDataStructure/TreeTopVIew.cpp)
#add_executable(CodingPractice DataStructures/TreeDataStructure/TreeRightView.cpp)
#add_executable(CodingPractice DataStructures/TreeDataStructure/TreeLeftView.cpp)
add_executable(CodingPractice DataStructures/TreeDataStructure/VerticalOrderTraversal.cpp)


#Online Coding Competetions
#add_executable(CodingPractice OnlineCodingComp/Codechef/JulyLong.cpp)
#add_executable(CodingPractice OnlineCodingComp/GoogleKickStart.cpp)
#add_executable(CodingPractice OnlineCodingComp/CourseraDS.cpp)
#add_executable(CodingPractice OnlineCodingComp/Hackerrank.cpp)
#add_executable(CodingPractice OnlineCodingComp/RecursionPractice.cpp)
#add_executable(CodingPractice OnlineCodingComp/CodeVita.cpp)

#Sorting Algorithms
#add_executable(CodingPractice Sorting/BubbleSort.cpp)
#add_executable(CodingPractice Sorting/InsertionSort.cpp)
#add_executable(CodingPractice Sorting/MergeSort.cpp )
#add_executable(CodingPractice Sorting/QuickSort.cpp )
#add_executable(CodingPractice Sorting/SelectionSort.cpp)


#Algorithms
#add_executable(CodingPractice DivideandConquer/mergesort.cpp)
#add_executable(CodingPractice DivideandConquer/quicksort.cpp)
#add_executable(CodingPractice DivideandConquer/MergeSortPractice.cpp)
#add_executable(CodingPractice DivideandConquer/MergeSortPractice.cpp)

#add_executable(CodingPractice BackTracking/NQueenProblem.cpp)
#add_executable(CodingPractice BackTracking/RatMazeProblem.cpp)
#add_executable(CodingPractice BackTracking/SudokuSolver.cpp)
#add_executable(CodingPractice BackTracking/WordBreakProblem.cpp)

#Greedy Algorithms
#add_executable(CodingPractice GreedyAlgo/fractionalknapsack.cpp)
#add_executable(CodingPractice GreedyAlgo/sumofsubset.cpp)
#add_executable(CodingPractice GreedyAlgo/ActivitySelectionProblem.cpp)
#add_executable(CodingPractice GreedyAlgo/JobSequencingProblem.cpp)
#add_executable(CodingPractice GreedyAlgo/HuffmanCoding.cpp)
#add_executable(CodingPractice GreedyAlgo/HuffmanCoding.cpp)
#add_executable(CodingPractice GreedyAlgo/PolicemenCatchesTheives.cpp)
#add_executable(CodingPractice GreedyAlgo/AssigningMicesToHoles.cpp)
#add_executable(CodingPractice GreedyAlgo/Prims.cpp)
#add_executable(CodingPractice GreedyAlgo/Kruskals.cpp)
#add_executable(CodingPracticeGreedyAlgo/Dijkstra.cpp)

#add_executable(CodingPractice DynamicProgramming/01KnapsackProblem.cpp)
#add_executable(CodingPractice DynamicProgramming/DynamicProblemFibonacci.cpp)
#add_executable(CodingPractice DynamicProgramming/LongestCommonSubsequence.cpp)
#add_executable(CodingPractice DynamicProgramming/LongestIncreasingSubsequence.cpp)
#add_executable(CodingPractice DynamicProgramming/RodCuttingProblem.cpp)
#add_executable(CodingPractice DynamicProgramming/OptimalStrategyForGame.cpp)
#add_executable(CodingPractice DynamicProgramming/EditDistance.cpp)
#add_executable(CodingPractice DynamicProgramming/SumofSubset.cpp)
#add_executable(CodingPractice DynamicProgramming/EqualPartitions.cpp)
#add_executable(CodingPractice DynamicProgramming/CountNumberofSubset.cpp)
#add_executable(CodingPractice DynamicProgramming/AddSignForTargetSum.cpp)
#add_executable(CodingPractice DynamicProgramming/LongestCommonSubstring.cpp)
#add_executable(CodingPractice DynamicProgramming/MaxSumDivisibleBy3.cpp)
#add_executable(CodingPractice DynamicProgramming/CoinChangeMaxNumberofWays.cpp)
#add_executable(CodingPractice DynamicProgramming/MatrixChainMultiplication.cpp)
#add_executable(CodingPractice DynamicProgramming/UnboundedKnapsack.cpp)
#add_executable(CodingPractice DynamicProgramming/PallindromicPartitions.cpp)
#add_executable(CodingPractice DynamicProgramming/MinimumDifferencePartition.cpp)
